# medtriage

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
data/: patients_easy.json  patients_hard.json  patients_medium.json
env/: environment.py  graders.py  models.py  reward.py
server/: app.py
tasks/: .env.example  Dockerfile  app.py  models.py  task_01_basic.py  task_02_differential.py  task_03_critical.py  triage_engine.py
tests/: test_graders.py  test_reward.py  test_spec.py
