[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "medtriage-env"
version = "1.0.0"
description = "AI Medical Triage Decision Environment for OpenEnv"
authors = [
    {name = "Madhav Arora", email = "madhav@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "numpy",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["env", "tasks", "server"]
